--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto&display=swap");
 header {
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  background-color: #ffffff;
+  width: 100%;
   padding: 20px 0;
 }
 header nav {
@@ -169,7 +174,7 @@ header nav .media_nav_menu {
   gap: 0px;
   border-top: 1px solid rgb(157, 159, 168);
   padding: 10px 20px;
-  background-color: rgb(215, 215, 217);
+  background-color: #ffffff;
 }
 @media (min-width: 960px) {
   header nav .media_nav_menu {
@@ -245,6 +250,10 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+.section-big-carousel {
+  margin-top: 100px;
 }
 
 .section-avto-jihozlar h2 {
