--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ header {
   background-color: #ffffff;
   width: 100%;
   padding: 20px 0;
+  box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
 }
 header nav {
   display: flex;
@@ -69,6 +70,7 @@ header nav .nav_menu .nav_katalog button .nav_katalog_text .nav_katalog_icon .na
   border-radius: 3px;
 }
 header nav .nav_menu .nav_menu_search {
+  position: relative;
   display: flex;
   justify-content: 0;
   align-items: center;
@@ -79,13 +81,6 @@ header nav .nav_menu .nav_menu_search {
   cursor: pointer;
   width: 100%;
   transition: 0.5s;
-}
-header nav .nav_menu .nav_menu_search img {
-  padding: 7px 25px;
-  border-radius: 0 5px 5px 0;
-  border: 1px solid #ffbf1f;
-  cursor: pointer;
-  background-color: #ffbf1f;
 }
 header nav .nav_menu .nav_menu_search input {
   padding: 0 0 0 20px;
@@ -98,6 +93,56 @@ header nav .nav_menu .nav_menu_search input {
   outline: none;
   transition: 0.5s;
   color: #ffbf1f;
+}
+header nav .nav_menu .nav_menu_search .search-container {
+  position: relative;
+  width: 100%;
+}
+header nav .nav_menu .nav_menu_search .suggestion-box {
+  position: absolute;
+  top: 45px;
+  left: 0;
+  width: 100%;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  display: none;
+  z-index: 100;
+  padding: 10px;
+  max-height: 300px;
+  overflow-y: auto;
+}
+header nav .nav_menu .nav_menu_search .suggestion-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #ddd;
+}
+header nav .nav_menu .nav_menu_search .suggestion-item:last-child {
+  border-bottom: none;
+}
+header nav .nav_menu .nav_menu_search .suggestion-item:hover {
+  background: #f0f0f0;
+}
+header nav .nav_menu .nav_menu_search .suggestion-item img {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 10px;
+}
+header nav .nav_menu .nav_menu_search .suggestion-info {
+  flex: 1;
+}
+header nav .nav_menu .nav_menu_search .suggestion-title {
+  font-size: 16px;
+  font-weight: 600;
+}
+header nav .nav_menu .nav_menu_search .suggestion-price {
+  font-size: 14px;
+  color: #290000;
 }
 header nav .nav_menu .nav_entry,
 header nav .nav_menu .nav_selected,
@@ -134,33 +179,88 @@ header nav .nav_menu .nav_cart {
 }
 header nav .nav_menu_2 {
   width: 100%;
+  /* Mobil uchun */
 }
 @media (min-width: 960px) {
   header nav .nav_menu_2 {
     display: none;
   }
 }
-header nav .nav_menu_2 .nav_menu_2_input {
+header nav .nav_menu_2 .search-container {
+  position: relative;
+  width: 100%;
+}
+header nav .nav_menu_2 .nav_menu_search-media {
   display: flex;
-  justify-content: 0;
-  align-items: center;
-  gap: 0px;
-  background-color: rgb(215, 215, 217);
-  padding: 2px;
-  border: 1px solid rgb(215, 215, 217);
-  border-radius: 10px;
-  width: 100%;
+  gap: 10px;
+  padding: 0 0 0 20px;
+  border-radius: 5px;
+  border: 1px solid #ffbf1f;
+  cursor: pointer;
 }
-header nav .nav_menu_2 .nav_menu_2_input img {
-  padding: 0 10px;
-}
-header nav .nav_menu_2 .nav_menu_2_input input {
-  font-size: 16px;
-  background-color: rgb(215, 215, 217);
+header nav .nav_menu_2 input {
+  font-size: 17px;
   width: 100%;
-  height: 30px;
+  height: 35px;
   outline: none;
   border: none;
+  transition: 0.5s;
+  color: #ffbf1f;
+}
+header nav .nav_menu_2 .suggestion-box {
+  position: absolute;
+  top: 45px;
+  left: 0;
+  width: 100%;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  display: none;
+  z-index: 100;
+  padding: 10px;
+  max-height: 300px;
+  overflow-y: auto;
+}
+header nav .nav_menu_2 .suggestion-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #ddd;
+  transition: background 0.3s;
+}
+header nav .nav_menu_2 .suggestion-item:last-child {
+  border-bottom: none;
+}
+header nav .nav_menu_2 .suggestion-item:hover {
+  background: #f0f0f0;
+}
+header nav .nav_menu_2 .suggestion-item img {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 10px;
+}
+header nav .nav_menu_2 .suggestion-info {
+  flex: 1;
+}
+header nav .nav_menu_2 .suggestion-title {
+  font-size: 16px;
+  font-weight: 600;
+}
+header nav .nav_menu_2 .suggestion-price {
+  font-size: 14px;
+  color: #ffbf1f;
+}
+@media (max-width: 768px) {
+  header nav .nav_menu_2 .desktop-search {
+    display: none;
+  }
+  header nav .nav_menu_2 .mobile-search {
+    display: block;
+  }
 }
 header nav .media_nav_menu {
   position: fixed;
@@ -253,7 +353,7 @@ a {
 }
 
 .section-big-carousel {
-  margin-top: 100px;
+  margin-top: 150px;
 }
 
 .section-avto-jihozlar h2 {
@@ -262,6 +362,8 @@ a {
   font-weight: 700;
 }
 .section-avto-jihozlar .section-avto-jihoz-cards {
+  border-radius: 5px;
+  padding: 10px;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -280,12 +382,16 @@ a {
   }
 }
 .section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card {
+  padding-bottom: 20px;
+  border: 2px solid transparent;
   margin-top: 40px;
   border-radius: 20px;
   width: 100%;
+  box-shadow: -1px 5px 16px 1px rgba(34, 60, 80, 0.2);
 }
 .section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card img {
   width: 100%;
+  height: 70%;
   border-radius: 20px;
 }
 .section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card h3 {
@@ -304,6 +410,10 @@ a {
   border-radius: 20px;
   padding: 10px;
   background-color: #ffbf1f;
+  transition: 0.3s;
+}
+.section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card h5:hover {
+  background-color: rgb(215, 215, 217);
 }
 .section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card .section-avto-jihoz-card-btn {
   margin-top: 20px;
@@ -312,13 +422,20 @@ a {
   align-items: center;
   justify-content: space-between;
 }
-.section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card .section-avto-jihoz-card-btn .korzinka img {
-  border-radius: 10px;
+.section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card .section-avto-jihoz-card-btn .korzinka {
+  cursor: pointer;
   padding: auto;
+  border-radius: 10px;
   padding: 10px;
   background-color: #ffbf1f;
-  height: 40px;
-  width: 40px;
+  transition: 0.3s;
+}
+.section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card .section-avto-jihoz-card-btn .korzinka img {
+  height: 20px;
+  width: 20px;
+}
+.section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card .section-avto-jihoz-card-btn .korzinka:hover {
+  background-color: rgb(215, 215, 217);
 }
 .section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card .section-avto-jihoz-card-btn button {
   border-radius: 10px;
@@ -328,6 +445,10 @@ a {
   font-size: 15px;
   font-weight: 700;
   background-color: #ffbf1f;
+  transition: 0.3s;
+}
+.section-avto-jihozlar .section-avto-jihoz-cards .section-avto-jihoz-card .section-avto-jihoz-card-btn button:hover {
+  background-color: rgb(215, 215, 217);
 }
 
 .carousel {
