--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -4,7 +4,7 @@
 @use "../components/buttons" as comb;
 
 .section-big-carousel {
-  margin-top: 100px;
+  margin-top: 150px;
 }
 .section-avto-jihozlar {
   h2 {
@@ -13,6 +13,8 @@
     font-weight: 700;
   }
   .section-avto-jihoz-cards {
+    border-radius: 5px;
+    padding: 10px;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -26,11 +28,15 @@
       grid-template-columns: repeat(1, 1fr);
     }
     .section-avto-jihoz-card {
+      padding-bottom: 20px;
+      border: 2px solid transparent;
       margin-top: 40px;
       border-radius: 20px;
       width: 100%;
+      box-shadow: -1px 5px 16px 1px rgba(34, 60, 80, 0.2);
       img {
         width: 100%;
+        height: 70%;
         border-radius: 20px;
       }
       h3 {
@@ -49,6 +55,10 @@
         border-radius: 20px;
         padding: 10px;
         background-color: var.$color-ffbf1f;
+        transition: 0.3s;
+        &:hover {
+          background-color: var.$light-gray;
+        }
       }
       .section-avto-jihoz-card-btn {
         margin-top: 20px;
@@ -57,13 +67,18 @@
         align-items: center;
         justify-content: space-between;
         .korzinka {
+          cursor: pointer;
           img {
-            border-radius: 10px;
-            padding: auto;
-            padding: 10px;
-            background-color: var.$color-ffbf1f;
-            height: 40px;
-            width: 40px;
+            height: 20px;
+            width: 20px;
+          }
+          padding: auto;
+          border-radius: 10px;
+          padding: 10px;
+          background-color: var.$color-ffbf1f;
+          transition: 0.3s;
+          &:hover {
+            background-color: var.$light-gray;
           }
         }
         button {
@@ -74,6 +89,10 @@
           font-size: 15px;
           font-weight: 700;
           background-color: var.$color-ffbf1f;
+          transition: 0.3s;
+          &:hover {
+            background-color: var.$light-gray;
+          }
         }
       }
     }
