--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -15,83 +15,73 @@
   .section-avto-jihoz-cards {
     border-radius: 5px;
     padding: 10px;
-    width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     justify-content: center; /* Ustunlar markazga keladi */
     align-content: center; /* Vertikal markazlash */
     gap: 20px; /* Elementlar orasidagi masofa */
-    @media (max-width: 760px) {
-      grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;
+    @media (max-width: 1280px) {
+      grid-template-columns: repeat(4, 1fr);
+      margin: 0 auto;
     }
-    @media (max-width: 530px) {
+    @media (max-width: 1040px) {
+      grid-template-columns: repeat(3, 1fr);
+      margin: 0 auto;
+    }
+    @media (max-width: 804px) {
+      grid-template-columns: repeat(2, 1fr);
+      margin: 0 auto;
+    }
+    @media (max-width: 540px) {
       grid-template-columns: repeat(1, 1fr);
+      margin: 0 auto;
     }
     .section-avto-jihoz-card {
-      padding-bottom: 20px;
-      border: 2px solid transparent;
-      margin-top: 40px;
-      border-radius: 20px;
       width: 100%;
-      box-shadow: -1px 5px 16px 1px rgba(34, 60, 80, 0.2);
-      img {
+      padding: 10px;
+      border-radius: 10px;
+      border: 2px solid transparent;
+      background-color: transparent;
+      .section-avto-image {
         width: 100%;
-        height: 70%;
-        border-radius: 20px;
+        border-radius: 10px;
+        background-size: cover;
+        scroll-behavior: auto;
       }
-      h3 {
-        padding: 5px;
-        font-size: 18px;
-        font-weight: 500;
-      }
-      h4 {
-        padding: 5px;
-        font-size: 25px;
-        font-weight: 700;
-      }
-      h5 {
-        margin-top: 5px;
-        display: inline-block;
-        border-radius: 20px;
-        padding: 10px;
-        background-color: var.$color-ffbf1f;
-        transition: 0.3s;
-        &:hover {
-          background-color: var.$light-gray;
-        }
-      }
-      .section-avto-jihoz-card-btn {
-        margin-top: 20px;
-        padding: 0 5px 20px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        .korzinka {
-          cursor: pointer;
-          img {
-            height: 20px;
-            width: 20px;
-          }
-          padding: auto;
-          border-radius: 10px;
-          padding: 10px;
-          background-color: var.$color-ffbf1f;
-          transition: 0.3s;
-          &:hover {
-            background-color: var.$light-gray;
-          }
-        }
-        button {
-          border-radius: 10px;
-          border: none;
-          padding: 10px 30px;
-          color: var.$color-290000;
+      .section-avto-jihoz-card-bottom {
+        h3 {
           font-size: 15px;
-          font-weight: 700;
-          background-color: var.$color-ffbf1f;
-          transition: 0.3s;
-          &:hover {
-            background-color: var.$light-gray;
+          height: 50px;
+          max-width: 200px;
+        }
+        h4 {
+          max-width: 200px;
+          padding: 10px 0;
+        }
+        .section-avto-jihoz-card-btn {
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          gap: 40px;
+          .korzinka {
+            border-radius: 10px;
+            padding: 3px 5px;
+            background-color: var.$color-ffbf1f;
+            img {
+              padding-top: 3px;
+              width: 30px;
+            }
+          }
+          button {
+            cursor: pointer;
+            font-size: 15px;
+            font-weight: 700;
+            border-radius: 10px;
+            border: none;
+            padding: 10px;
+            background-color: var.$color-ffbf1f;
           }
         }
       }
