--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -45,6 +45,7 @@
       background-color: transparent;
       .section-avto-image {
         width: 100%;
+        height: 60%;
         border-radius: 10px;
         background-size: cover;
         scroll-behavior: auto;
@@ -53,10 +54,10 @@
         h3 {
           font-size: 15px;
           height: 50px;
-          max-width: 200px;
+          width: 100%;
         }
         h4 {
-          max-width: 200px;
+          width: 100%;
           padding: 10px 0;
         }
         .section-avto-jihoz-card-btn {
